fix: Icon color for dark mode

--- a/frappe/public/scss/desk/dark.scss
+++ b/frappe/public/scss/desk/dark.scss
@@ -18,7 +18,7 @@
 
 	// SVG Colors
 	--icon-fill: transparent;
-	--icon-stroke: var(--gray-500);
+	--icon-stroke: var(--gray-300);
 
 	// Layout Colors
 	--bg-color: var(--gray-900);
